--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "apollo-server": "^3.5.0",
     "apollo-server-core": "^3.5.0",
     "graphql": "^15.8.0",
+    "mongoose": "^6.1.1",
+    "mongoose-unique-validator": "^3.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
