--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "author": "Koh Jun Jie",
   "license": "MIT",
   "dependencies": {
-    "apollo-server": "^3.5.0",
+    "@graphql-tools/schema": "^8.3.1",
     "apollo-server-core": "^3.5.0",
-    "graphql": "^15.8.0",
+    "apollo-server-express": "^3.5.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "graphql": "^16.2.0",
+    "graphql-subscriptions": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.1",
     "mongoose-unique-validator": "^3.0.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
